# OBS-Bayer-dithering-filter

./: CMakeLists.txt
data/: effect1.effect  effect2.effect  effect3.effect  effect4.effect
plugin/: CMakeLists.txt  plugin.c
